<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:background="@drawable/panel_background"
	        android:gravity="center_vertical|center_horizontal"
	        android:orientation="vertical" >
	        <TextView
	            android:id="@+id/message"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:gravity="center_vertical|center_horizontal"
	            android:text="@string/need_download_files"
	            android:textColor="#383939"
	            android:textSize="@dimen/text14sp"
	            android:textStyle="bold" />
	        
	        <TextView
	            android:id="@+id/message1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="5dp"
	            android:gravity="center_vertical|center_horizontal"
	            android:text="@string/download_tts"
	            android:textColor="#383939"
	            android:textSize="@dimen/text14sp" />

	        <Button
	            android:id="@+id/download_tts"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="5dp"
	            android:layout_weight="1"
	            android:background="@drawable/btn_simple"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:text="@string/download"
	            android:textColor="#ffffff" />

	        <TextView
	            android:id="@+id/message2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="5dp"
	            android:gravity="center_vertical|center_horizontal"
	            android:text="@string/open_voice_store"
	            android:textColor="#383939"
	            android:textSize="@dimen/text14sp" />
	        
	        <Button
	            android:id="@+id/open_store"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="5dp"
	            android:layout_weight="1"
	            android:background="@drawable/btn_simple"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:text="@string/open_store"
	            android:textColor="#ffffff" />

        </LinearLayout>
</LinearLayout>
</RelativeLayout>