<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/actionBarColor"
    android:paddingTop="@dimen/tool_bar_top_padding"
    tools:context=".SpeindSettings" >

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionBarColor">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_settings_title"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#383939"
            android:textSize="@dimen/text16sp"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_plugins_for_post"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="16dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/keep_wrap"
            android:layout_below="@+id/message">

            <LinearLayout
                android:id="@+id/scrollItems"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/show_before_post_wrap"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/delimeter_h" >

                    <ToggleButton
                        android:id="@+id/show_before_post"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true"
                        android:checked="false"
                        android:textOff=""
                        android:textOn=""/>

                    <TextView
                        android:id="@+id/show_before_post_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/show_before_post"
                        android:paddingRight="16dp"
                        android:text="@string/show_before_post"
                        android:textColor="#383939"
                        android:textSize="@dimen/text14sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/settingsItems"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/keep_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons_wrap"
            android:visibility="gone"
            android:layout_margin="5dp">
            <ToggleButton
                android:id="@+id/keep"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:background="@drawable/checkbox_selector"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                style="?android:attr/buttonBarButtonStyle"/>

            <TextView
                android:id="@+id/keep_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/keep"
                android:paddingLeft="16dp"
                android:text="@string/keep_choice"
                android:textColor="#383939"
                android:textSize="@dimen/text14sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@id/buttons_wrap"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:visibility="gone">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_simple"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/ok"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/cancell_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_simple"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>