<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/actionBarColor"
    android:paddingTop="@dimen/tool_bar_top_padding"
    tools:context=".SpeindSettings" >       

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionBarColor">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#383939"
            android:textSize="@dimen/text16sp"/>

    </android.support.v7.widget.Toolbar>
        
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/scrollItems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/general_settings_wrap"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/delimeter_h" >

                <TextView
                    android:id="@+id/general_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="16dp"
                    android:text="@string/general_settings"
                    android:textColor="#383939"
                    android:textSize="@dimen/text14sp" />

                <Button
                    android:id="@+id/general_settings_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_arrow"
                    style="?android:attr/buttonBarButtonStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/post_settings_wrap"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/delimeter_h" >

                <TextView
                    android:id="@+id/post_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="16dp"
                    android:text="@string/post_settings"
                    android:textColor="#383939"
                    android:textSize="@dimen/text14sp" />

                <Button
                    android:id="@+id/post_settings_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_arrow"
                    style="?android:attr/buttonBarButtonStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pinboard_settings_wrap"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/delimeter_h" >

                <TextView
                    android:id="@+id/pinboard_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="16dp"
                    android:text="@string/pinboard_settings"
                    android:textColor="#383939"
                    android:textSize="@dimen/text14sp" />

                <Button
                    android:id="@+id/pinboard_settings_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_arrow"
                    style="?android:attr/buttonBarButtonStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/langs_settings_wrap"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/delimeter_h" >

                <TextView
                    android:id="@+id/langs_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="16dp"
                    android:text="@string/langs_settings"
                    android:textColor="#383939"
                    android:textSize="@dimen/text14sp" />

                <Button
                    android:id="@+id/langs_settings_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_arrow" 
                    style="?android:attr/buttonBarButtonStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settingsItemsTitle"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/delimeter_h" >

                <TextView
                    android:id="@+id/settingsItemsTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/data_sources"
                    android:textColor="#383939"
                    android:textSize="@dimen/text14sp" />
            </RelativeLayout>

	        <LinearLayout
	            android:id="@+id/settingsItems"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	        </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>